# silentsparrow

./: Cargo.toml  README.md  silent-sparrow.service  sparrow-watchdog.service  sparrow.toml
.github/workflows/: ci.yml
src/: canary.rs  config.rs  crypto.rs  lib.rs  main.rs  publisher.rs
