[package]
name = "silent-sparrow"
version = "0.2.0"
edition = "2024"
authors = ["0xRogu <me@rogu.wtf>"]
description = "A minimal, scheduled, cryptographically signed status beacon."
documentation = "https:://github.com/0xRogu/silent-sparrow#readme"
readme = "README.md"
homepage = "hhttps:://github.com/0xRogu/silent-sparrow"
repository = "https:://github.com/0xRogu/silent-sparrow"
license = "MPL-2.0"
keywords = ["status", "beacon", "crypto", "ed25519", "transparency"]
categories = ["command-line-utilies", "cryptography", "development-tools"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[[bin]]
name = "silent-sparrow"
path = "src/main.rs"

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version - "0.4", features = ["clock"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
base64ct = "1.6"
directories = "5.0"
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
