[package]
name = "silent-sparrow"
version = "0.4.0"
edition = "2024"
authors = ["0xRogu <me@rogu.wtf>"]
description = "A minimal, scheduled, cryptographically signed status beacon."
documentation = "https://github.com/0xRogu/silent-sparrow#readme"
readme = "README.md"
homepage = "https://github.com/0xRogu/silent-sparrow"
repository = "https://github.com/0xRogu/silent-sparrow"
license = "MPL-2.0"
keywords = ["status", "beacon", "crypto", "ed25519", "transparency"]
categories = ["command-line-utilities", "cryptography", "development-tools"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[lib]
name = "silent_sparrow"
path = "src/lib.rs"

[[bin]]
name = "silent-sparrow"
path = "src/main.rs"

[[bin]]
name = "sparrow-watchdog"
path = "src/bin/watchdog.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64ct = { version = "1.6", features = ["alloc"] }
hex = "0.4"
directories = "5.0"
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
